apps/kubecraft/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
