apps/kubecraft/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubecraft-internal
  namespace: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  entryPoints:
    - cf-public
  routes:
    - match: Host(`mine.fferrando.cc`)
      kind: Rule
      services:
        # <release> service from the chart
        - name: kubecraft
          port: 80
